cft/ec2.yml
Parameters:
    KeyName:
        Description: The EC2 key pair to all access
        Type: AWS::EC2::KeyPair::KeyName
    GitHubOwner:
      Type: String
    GitHubRepo:
      Type: String
    GitHubBranch:
      Type: String
Resources:
    EC2InstanceLab:
        Type: AWS::EC2::Instance
        Properties:
            SecurityGroups:
                - !Ref InstanceSecurityGroup
            KeyName: !Ref KeyName
            ImageId: ami-096fda3c22c1c990a
            InstanceType: t2.micro
    InstanceSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupDescription: Enable SSH access via port 22
            SecurityGroupIngress:
                - IpProtocol: tcp
                  FromPort: 22
                  ToPort: 22
                  CidrIp: 0.0.0.0/0
                - IpProtocol: tcp
                  FromPort: 80
                  ToPort: 80
                  CidrIp: 0.0.0.0/0
                - IpProtocol: tcp
                  FromPort: 443
                  ToPort: 443
                  CidrIp: 0.0.0.0/0
    InAssoc:
      Type: AWS::SSM::Association
      Properties:
        Name: AWS-ApplyAnsiblePlaybooks
        Targets:
          - Key: InstanceIds
            Values: [ !Ref EC2InstanceLab ]
        Parameters:
          SourceType:
            - GitHub
          SourceInfo:
            - !Sub |
                {"owner":"${GitHubOwner}",
                "repository":"${GitHubRepo}",
                "path":"/cm",
                "getOptions":"${GitHubBranch}"}
          PlaybookFile:
            - apache.yml
          ExtraVariables:
            - 'SSM=True'
          Check:
            - 'False'
          Verbose:
            - '-v'
